src/parser/snapshots/protols__parser__rename__test__can_rename-4.snap
---
source: src/parser/rename.rs
expression: tree.can_rename(&pos_outer_type)
---
start:
  line: 19
  character: 4
end:
  line: 19
  character: 8
