src/parser/snapshots/protols__parser__rename__test__can_rename_service_and_rpc-2.snap
---
source: src/parser/rename.rs
expression: tree.can_rename(&pos_rpc)
---
start:
  line: 11
  character: 8
end:
  line: 11
  character: 15
