src/parser/snapshots/protols__parser__rename__test__rename-2.snap
---
source: src/parser/rename.rs
expression: "tree.rename(&pos_author_rename, \"Writer\", contents)"
---
changes:
  "file://foo/bar.proto":
    - range:
        start:
          line: 11
          character: 12
        end:
          line: 11
          character: 18
      newText: Writer
    - range:
        start:
          line: 15
          character: 4
        end:
          line: 15
          character: 10
      newText: Writer
    - range:
        start:
          line: 21
          character: 9
        end:
          line: 21
          character: 15
      newText: Writer
