src/parser/snapshots/protols__parser__rename__test__rename-3.snap
---
source: src/parser/rename.rs
expression: "tree.rename(&pos_non_renamble, \"Doesn't matter\", contents)"
---
~
